fix letter spacing

--- a/src/nlds/scss/main.scss
+++ b/src/nlds/scss/main.scss
@@ -13,6 +13,7 @@
         width: initial;
         margin: 0;
         box-shadow: none;
+        letter-spacing: normal;
         &:disabled {
             @include utrecht-button--disabled;
         }
